--- a/SquareHackathon/mainwindow.ui
+++ b/SquareHackathon/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Hair Salon Booking Manager</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QStackedWidget" name="mainStackWidget">
@@ -19,12 +19,12 @@
      <rect>
       <x>30</x>
       <y>10</y>
-      <width>751</width>
-      <height>541</height>
+      <width>1536</width>
+      <height>864</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>3</number>
     </property>
     <widget class="QWidget" name="employeeManagerView">
      <widget class="QPushButton" name="addEmployeeButton">
@@ -1309,24 +1309,39 @@
      <widget class="QLabel" name="mainMenuTitle">
       <property name="geometry">
        <rect>
-        <x>240</x>
+        <x>138</x>
         <y>90</y>
-        <width>251</width>
-        <height>31</height>
+        <width>1261</width>
+        <height>231</height>
        </rect>
       </property>
+      <property name="font">
+       <font>
+        <family>Rubeckia</family>
+        <italic>false</italic>
+        <bold>false</bold>
+       </font>
+      </property>
       <property name="text">
-       <string>HairSalon Bookings Manager</string>
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:64pt;&quot;&gt;HairSalon Bookings Manager&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
       </property>
      </widget>
      <widget class="QPushButton" name="employeeManagerButton">
       <property name="geometry">
        <rect>
-        <x>280</x>
-        <y>150</y>
-        <width>121</width>
-        <height>25</height>
+        <x>673</x>
+        <y>330</y>
+        <width>190</width>
+        <height>50</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
       </property>
       <property name="text">
        <string>Employee Manager</string>
@@ -1335,11 +1350,16 @@
      <widget class="QPushButton" name="bookManagerButton">
       <property name="geometry">
        <rect>
-        <x>280</x>
-        <y>190</y>
-        <width>121</width>
-        <height>21</height>
+        <x>673</x>
+        <y>400</y>
+        <width>190</width>
+        <height>50</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
       </property>
       <property name="text">
        <string>Booking Manager</string>
@@ -1348,14 +1368,37 @@
      <widget class="QPushButton" name="settingsButton">
       <property name="geometry">
        <rect>
-        <x>280</x>
-        <y>230</y>
-        <width>121</width>
-        <height>21</height>
+        <x>673</x>
+        <y>540</y>
+        <width>190</width>
+        <height>50</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
       </property>
       <property name="text">
        <string>Settings</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="viewAllBookingsButton">
+      <property name="geometry">
+       <rect>
+        <x>673</x>
+        <y>470</y>
+        <width>190</width>
+        <height>50</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>View All Bookings</string>
       </property>
      </widget>
     </widget>
@@ -1367,7 +1410,7 @@
      <x>0</x>
      <y>0</y>
      <width>1536</width>
-     <height>22</height>
+     <height>20</height>
     </rect>
    </property>
   </widget>
