--- a/SquareHackathon/mainwindow.ui
+++ b/SquareHackathon/mainwindow.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>4</number>
+     <number>5</number>
     </property>
     <widget class="QWidget" name="employeeManagerView">
      <widget class="QPushButton" name="addEmployeeButton">
@@ -1232,7 +1232,103 @@
         </property>
        </widget>
       </widget>
-      <widget class="QWidget" name="cancelBookingView"/>
+      <widget class="QWidget" name="cancelBookingView">
+       <widget class="QTextEdit" name="client_apptEmployee">
+        <property name="geometry">
+         <rect>
+          <x>370</x>
+          <y>210</y>
+          <width>211</width>
+          <height>41</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QTextEdit" name="client_apptTime">
+        <property name="geometry">
+         <rect>
+          <x>370</x>
+          <y>270</y>
+          <width>211</width>
+          <height>41</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QTextEdit" name="client_apptDate">
+        <property name="geometry">
+         <rect>
+          <x>380</x>
+          <y>340</y>
+          <width>211</width>
+          <height>41</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QLabel" name="txt_client_apptEmployee">
+        <property name="geometry">
+         <rect>
+          <x>260</x>
+          <y>220</y>
+          <width>81</width>
+          <height>17</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Hair Stylist:</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="txt_client_apptTime">
+        <property name="geometry">
+         <rect>
+          <x>290</x>
+          <y>280</y>
+          <width>54</width>
+          <height>17</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Time:</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="txt_client_apptDate">
+        <property name="geometry">
+         <rect>
+          <x>290</x>
+          <y>360</y>
+          <width>54</width>
+          <height>17</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Date:</string>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="cancel_button_viewAppt">
+        <property name="geometry">
+         <rect>
+          <x>310</x>
+          <y>440</y>
+          <width>141</width>
+          <height>25</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Cancel Appointment</string>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="mainMenu_viewAppt">
+        <property name="geometry">
+         <rect>
+          <x>340</x>
+          <y>480</y>
+          <width>80</width>
+          <height>25</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Main Menu</string>
+        </property>
+       </widget>
+      </widget>
      </widget>
      <widget class="QLineEdit" name="clientPhoneNumber">
       <property name="geometry">
@@ -1509,7 +1605,7 @@
      <x>0</x>
      <y>0</y>
      <width>1536</width>
-     <height>20</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
