--- a/SquareHackathon/mainwindow.ui
+++ b/SquareHackathon/mainwindow.ui
@@ -10,6 +10,11 @@
     <height>864</height>
    </rect>
   </property>
+  <property name="font">
+   <font>
+    <pointsize>12</pointsize>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>Hair Salon Booking Manager</string>
   </property>
@@ -24,7 +29,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>5</number>
+     <number>3</number>
     </property>
     <widget class="QWidget" name="employeeManagerView">
      <widget class="QPushButton" name="addEmployeeButton">
@@ -853,21 +858,29 @@
      <widget class="QLineEdit" name="client_signIn_email">
       <property name="geometry">
        <rect>
-        <x>560</x>
-        <y>90</y>
-        <width>171</width>
-        <height>25</height>
+        <x>630</x>
+        <y>270</y>
+        <width>281</width>
+        <height>31</height>
        </rect>
+      </property>
+      <property name="text">
+       <string/>
       </property>
      </widget>
      <widget class="QPushButton" name="signInButton">
       <property name="geometry">
        <rect>
-        <x>740</x>
-        <y>90</y>
-        <width>80</width>
-        <height>25</height>
+        <x>920</x>
+        <y>270</y>
+        <width>91</width>
+        <height>31</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
       </property>
       <property name="text">
        <string>Sign in</string>
@@ -876,9 +889,9 @@
      <widget class="QLabel" name="label">
       <property name="geometry">
        <rect>
-        <x>460</x>
-        <y>90</y>
-        <width>101</width>
+        <x>513</x>
+        <y>270</y>
+        <width>111</width>
         <height>20</height>
        </rect>
       </property>
@@ -889,11 +902,16 @@
      <widget class="QPushButton" name="SignpButton">
       <property name="geometry">
        <rect>
-        <x>700</x>
-        <y>150</y>
-        <width>71</width>
-        <height>29</height>
+        <x>800</x>
+        <y>360</y>
+        <width>91</width>
+        <height>31</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
       </property>
       <property name="text">
        <string>Sign up</string>
@@ -902,8 +920,8 @@
      <widget class="QLabel" name="txt_outputMessage">
       <property name="geometry">
        <rect>
-        <x>540</x>
-        <y>150</y>
+        <x>620</x>
+        <y>360</y>
         <width>161</width>
         <height>20</height>
        </rect>
@@ -1143,6 +1161,11 @@
           <height>31</height>
          </rect>
         </property>
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
        </widget>
        <widget class="QLabel" name="txt_date">
         <property name="geometry">
@@ -1179,10 +1202,15 @@
         <property name="geometry">
          <rect>
           <x>250</x>
-          <y>480</y>
+          <y>477</y>
           <width>121</width>
-          <height>28</height>
+          <height>31</height>
          </rect>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
         </property>
        </widget>
        <widget class="QCalendarWidget" name="calendarWidget">
@@ -1335,9 +1363,14 @@
        <rect>
         <x>240</x>
         <y>410</y>
-        <width>231</width>
+        <width>261</width>
         <height>31</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
       </property>
       <property name="readOnly">
        <bool>true</bool>
@@ -1346,15 +1379,15 @@
      <widget class="QLineEdit" name="clientName">
       <property name="geometry">
        <rect>
-        <x>210</x>
+        <x>180</x>
         <y>350</y>
-        <width>141</width>
-        <height>31</height>
+        <width>181</width>
+        <height>41</height>
        </rect>
       </property>
       <property name="font">
        <font>
-        <pointsize>12</pointsize>
+        <pointsize>14</pointsize>
        </font>
       </property>
       <property name="text">
@@ -1405,9 +1438,17 @@
        <rect>
         <x>240</x>
         <y>460</y>
-        <width>231</width>
+        <width>261</width>
         <height>31</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string/>
       </property>
       <property name="readOnly">
        <bool>true</bool>
@@ -1513,6 +1554,7 @@
       <property name="font">
        <font>
         <family>Rubeckia</family>
+        <pointsize>12</pointsize>
         <italic>false</italic>
         <bold>false</bold>
        </font>
@@ -1605,7 +1647,7 @@
      <x>0</x>
      <y>0</y>
      <width>1536</width>
-     <height>22</height>
+     <height>23</height>
     </rect>
    </property>
   </widget>
