--- a/SquareHackathon/mainwindow.ui
+++ b/SquareHackathon/mainwindow.ui
@@ -922,7 +922,7 @@
        <rect>
         <x>620</x>
         <y>360</y>
-        <width>161</width>
+        <width>171</width>
         <height>20</height>
        </rect>
       </property>
@@ -1264,9 +1264,9 @@
        <widget class="QTextEdit" name="client_apptEmployee">
         <property name="geometry">
          <rect>
-          <x>370</x>
+          <x>360</x>
           <y>210</y>
-          <width>211</width>
+          <width>221</width>
           <height>41</height>
          </rect>
         </property>
@@ -1274,9 +1274,9 @@
        <widget class="QTextEdit" name="client_apptTime">
         <property name="geometry">
          <rect>
-          <x>370</x>
+          <x>360</x>
           <y>270</y>
-          <width>211</width>
+          <width>221</width>
           <height>41</height>
          </rect>
         </property>
@@ -1284,9 +1284,9 @@
        <widget class="QTextEdit" name="client_apptDate">
         <property name="geometry">
          <rect>
-          <x>380</x>
-          <y>340</y>
-          <width>211</width>
+          <x>360</x>
+          <y>330</y>
+          <width>221</width>
           <height>41</height>
          </rect>
         </property>
@@ -1307,7 +1307,7 @@
        <widget class="QLabel" name="txt_client_apptTime">
         <property name="geometry">
          <rect>
-          <x>290</x>
+          <x>300</x>
           <y>280</y>
           <width>54</width>
           <height>17</height>
@@ -1320,8 +1320,8 @@
        <widget class="QLabel" name="txt_client_apptDate">
         <property name="geometry">
          <rect>
-          <x>290</x>
-          <y>360</y>
+          <x>300</x>
+          <y>350</y>
           <width>54</width>
           <height>17</height>
          </rect>
@@ -1333,10 +1333,10 @@
        <widget class="QPushButton" name="cancel_button_viewAppt">
         <property name="geometry">
          <rect>
-          <x>310</x>
-          <y>440</y>
-          <width>141</width>
-          <height>25</height>
+          <x>290</x>
+          <y>420</y>
+          <width>161</width>
+          <height>31</height>
          </rect>
         </property>
         <property name="text">
@@ -1346,10 +1346,10 @@
        <widget class="QPushButton" name="mainMenu_viewAppt">
         <property name="geometry">
          <rect>
-          <x>340</x>
-          <y>480</y>
-          <width>80</width>
-          <height>25</height>
+          <x>470</x>
+          <y>420</y>
+          <width>111</width>
+          <height>31</height>
          </rect>
         </property>
         <property name="text">
@@ -1454,7 +1454,7 @@
        <bool>true</bool>
       </property>
      </widget>
-     <widget class="QLabel" name="label_3">
+     <widget class="QLabel" name="profilePicImage">
       <property name="geometry">
        <rect>
         <x>120</x>
