Image Now Works

--- a/SquareHackathon/Fonts.qrc
+++ b/SquareHackathon/Fonts.qrc
@@ -2,4 +2,7 @@
     <qresource prefix="/fonts">
         <file>Rubeckia.ttf</file>
     </qresource>
+    <qresource prefix="/images">
+        <file>profile.png</file>
+    </qresource>
 </RCC>
